# web-app

web_app/: app.py  requirements.txt  run_pipeline.py
web_app/processed/e601323b-1e2d-4a99-b3b5-b16789acd933/weather_sample_directory/: README.txt
web_app/static/css/: styles.css
web_app/static/js/: scripts.js
web_app/templates/: index.html
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/: README.md  pyproject.toml
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/LLM_classifier/: api.py  classifier.py  prompts.py
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/LLM_classifier/LLM_results/: congress.csv  metrics.py
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/LLM_classifier/selected_few_shot_pipeline/: api.py  classifier.py  metrics.py
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/data_labeled/: brown_congress_labels_mapped.csv  prepare_labeled_datasets.py  simple_preparer.py
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/data_labeled/congress_binary/: test.csv  validation.csv
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/data_labeled/original_cards/: test.csv
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/data_labeled/think_tank_binary/: test_in_format_50.csv  validation_original.csv
web_app/uploads/ff3d8cc5-e75b-4231-bdde-b8534d05cee6/denial-delay-classifier/data_unlabeled/: clean_unlabeled_dataset.py
(+12 files in other folders)
