[project]
name = "denial-delay-classifier"
version = "0.1.0"
description = "Classifier for detecting climate denial and delay"
readme = "README.md"
requires-python = ">=3.9"
# license = {file = "LICENSE"} # TODO: Add license file
keywords = ["climate", "disinformation"]

authors = [
  { name = "William Kattrup", email = "william_kattrup@brown.edu"}
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
  "pandas==2.2.2",
  "openai==1.30.1",
  "statsmodels==0.13.2"
]

[project.urls]
"Homepage" = "https://github.com/willkattrup/denial-delay-classifier.git"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["RoBERTa", "data_labeled", "LLM_classifier", "data_unlabeled"]
